--- a/config/database.yml
+++ b/config/database.yml
@@ -16,14 +16,37 @@
 #
 default: &default
   adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 8 } %>
+  encoding: utf8
 
 development:
   <<: *default
   database: quebradas_barbershop_development
+  host: localhost
+
+test:
+  <<: *default
+  database: quebradas_barbershop_test
+  host: 127.0.0.1
+
+bi:
+  <<: *default
+  database: quebradas_barbershop_bi
+  host: localhost
+  username: postgres
+  pasword: root
+
+
+# default: &default
+#  adapter: postgresql
+#  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
+#  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
+#development:
+# <<: *default
+#  database: quebradas_barbershop_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -55,9 +78,9 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: quebradas_barbershop_test
+#test:
+#  <<: *default
+#  database: quebradas_barbershop_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
